packages/lang/test/__golden__/config-errors/duplicate-session.txt
error[TF029]: duplicate session `admin`
 --> tflw.config:7:1
  |
7 | session admin
  | ^^^^^^^^^^^^^
  |
  = help: session names must be unique
